@@ -103,42 +103,6 @@
     return pp;
 }
 
-- (void)moveControlAtPoint:(NSPoint)oldp toPoint:(NSPoint)newp
-{
-    GRObjectControlPoint *cp;
-    BOOL found = NO;
-
-    cp = [(GRBox *)object startControlPoint];
-    if (pointInRect([cp centerRect], oldp))
-    {
-        [self selectForEditing];
-        [(GRPathObject *)object setCurrentPoint:cp];
-        [cp select];
-        found =  YES;
-    }
-    cp = [(GRBox *)object endControlPoint];
-    if (pointInRect([cp centerRect], oldp))
-    {
-        [self selectForEditing];
-        [(GRBox *)object setCurrentPoint:cp];
-        [cp select];
-        found =  YES;
-    }
-    
-    if(!found)
-        return;
-/*
-    pntonpnt = [object pointOnPoint: [object currentPoint]];
-    if(pntonpnt)
-    {
-        if([object currentPoint] == [object firstPoint] || pntonpnt == [object firstPoint])
-            [pntonpnt moveToPoint: newp];
-    }*/
-    [[(GRPathObject *)object currentPoint] moveToPoint: newp];
-//    [object remakePath];
-    [[object view] setNeedsDisplay: YES];
-}
-
 
 - (void)draw
 {
